fixed spacing and re-added the making of

--- a/style-index.css
+++ b/style-index.css
@@ -14,6 +14,7 @@ body {
 
 .title {
   text-align: center;
+  font-size: 1.75rem;
 }
 .titlebox img {
   width: 100%;
@@ -63,6 +64,7 @@ button {
   max-width: 100%;
   justify-content: space-around;
   gap: 30px;
+  padding: 5%;
   /* border: 2px solid blue; */
 }
 
@@ -139,8 +141,9 @@ a:link {
 }
 
 .pagebreak {
-  margin: 31px 0;
+  margin: 31px auto;
   border: 1px solid #e5e5e5;
+  width: 95%;
 }
 
 /* GENIUSES PAGE */
